template.css
:root {
    --lbss-purple: #5a2d88;
    --lbss-gold: #fcc81d;
    --un-blue: #009edb;
}

body {
    font-family: "Oswald", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

#topBar {
    position: fixed;
    width: 100%;
    height: 8.5%;
    background-color: rgba(255,255,255, 0.025);
    top: 0;
    left: 0;
    border-color: rgba(255, 255, 255, 0.25);
    border-width: 3.5px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
    z-index: 3;
    color: white;
    text-align: right;
    padding: 0.1%;
    line-height: 1.5;
    font-size: 2.5em;
    font-weight: 200;
}

#links {
    padding-right: 1%;
    padding-bottom: 0.5%;
    padding-top: 0.5%;
    word-spacing: 12%;
    font-size: 0.75em;
    gap: 2%;
}

#links a {
    color: white;
    text-decoration: none;

}

#links a:hover {
    color: rgb(218, 218, 218);
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
}

#topBar.scrolled {
    background-color: var(--lbss-purple);
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
}

#topBarLogo {
    height: 80%;
    margin: 0.1%;
    position: absolute;
    top: 1%;
    left: 1%;
    text-align: left;
}

#siteName {
    text-align: left;
    position: absolute;
    left: 9%;
    margin: 0;
    padding: 0;
    color: white;
}

#header {
    position: relative;
    width: 100%;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
}

#headerBackground {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: -1;
    filter: brightness(0.7);
}

#headerOverlay {
    position: relative;
    margin: 20px;
    padding: 40px;
    border-radius: 20px;
    max-width: 900px; 
    font-size: 1.45rem;
    text-align: center;
}

#titleWelcome {
    text-align: center;
    color: white;
    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
    padding-top: 5px;
    font-size: 6em;
}

#subtitleWelcome {
    text-align: center;
    color: white;
    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
    margin-top: -25%;
    font-size: 1.5em;
}

.rn {
    font-family: serif;
    font-size: 1.2em;
}

#title {
    text-align: center;
    color: white;
    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
    padding-top: 5px;
}

#headerLogo {
    width: 350px;
    margin-bottom: 15px;
    margin-left: 5%;
    margin-right: 5%;
    z-index: 0;
    margin-bottom: -30px;
}

footer {
    position: relative;
    width: 100%;
    min-height: 800px;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
}

#footerBackground {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: -1;
}

#footerText {
    position: absolute; 
    margin: 20px;
    padding: 20px;
    background-color: rgba(255, 255, 255, 0.075); 
    border-radius: 15px;
    font-weight: 300;
    font-size: 0.85rem;
    text-align: center;
    line-height: 1.5;
    max-width: 100%;
    bottom: 5%;
}

.dropbtn {
    background-color: transparent;
    color: white;
    font-family: inherit;
    font-size: inherit;
    border: none;
    cursor: pointer;
    text-shadow: none;
    text-decoration: none;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    top: 100%;
    left: 50%;
    transform: translateX(-50%);
    min-width: 180px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.6);
    z-index: 9999;
    border-radius: 8px;
    overflow: hidden;
    text-align: center;
}

.dropdown-content.scrolled {
    background-color: var(--lbss-purple);
}

.dropdown-content a {
    color: white;
    padding: 15px 20px;
    text-decoration: none;
    display: block;
    font-size: 1.2rem;
    transition: background-color 0.3s ease, color 0.3s ease;
    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
    margin: 0;
}

